--- a/WebGL-Coursework.html
+++ b/WebGL-Coursework.html
@@ -296,22 +296,22 @@
 			var result;
 
 			//Determine vector has the greatest 'up' component
-			if(localUp.x > limit){
+				if(localUp.x > limit){
 					alert("You rolled: 1");
-			} else if(localUp.x < -limit){
+				} else if(localUp.x < -limit){
 					alert("You rolled: 2");
-			} else if(localUp.y > limit){
-				alert("You rolled: 3");
-			} else if(localUp.y < -limit){
-				alert("You rolled: 4");
-			} else if(localUp.z > limit){
-				alert("You rolled: 5")
-			} else if(localUp.z < -limit){
-				alert("You rolled: 6");
-			} else {
-				console.log("not flat")
-				//No greatest up component i.e. dice not flat
-			}
+				} else if(localUp.y > limit){
+					alert("You rolled: 3");
+				} else if(localUp.y < -limit){
+					alert("You rolled: 4");
+				} else if(localUp.z > limit){
+					alert("You rolled: 5");
+				} else if(localUp.z < -limit){
+					alert("You rolled: 6");
+				} else {
+					console.log("not flat")
+					//No greatest up component i.e. dice not flat
+		}
 			cubeOptions.spin = false;
 
 		}
@@ -485,9 +485,11 @@
 				//Combines physics object & threejs object
 				cube.position.copy(boxBody.position) //Translate position data of cube to physics object
 				cube.quaternion.copy(boxBody.quaternion) //Translate rotation data of cube to physics object
+				console.log(boxBody.position);
 
-				//Checks angular velocity, waits for cube to stop spinning
-				if (boxBody.angularVelocity.x < 0.001 && boxBody.angularVelocity.y < 0.001 && boxBody.angularVelocity.z < 0.001) {
+				//Checks y position of box: waits for it to be flat on the ground
+				if (boxBody.position.y < 1) {
+
 					stopRoll();//Run function to stop dice roll
 				}
 			}
@@ -523,13 +525,6 @@
 
 			//Change movement mode to Orbit when button pressed:
 			if (cameraOptions.orbit) {
-				if (!cameraOptions.moveLeft || !cameraOptions.moveRight) {
-					if (camera.position.z >= 0) {
-						camera.up = new THREE.Vector3(0,1,0);
-					} else {
-						camera.up = new THREE.Vector3(0,-1,0);
-					}
-				}
 				//Centre camera on origin
 				camera.lookAt(0,0,0);
 
